-
    Bug fixed: Loaded filter options in AJAX now with stopped client
    cache. Real#0782, Thanks Jack.
    
    Bug fixed: File attachments of followups weren't immediately
    indexed.
    
    Bug fixed: Sometimes followup objects weren't index properly by
    path. This was not a problem when the catalog was only used for
    searching but now it's used to count issues too.
    
    New feature: Detail changes to issues are recorded and shown on
    the issue page.

    New feature: If you upload a file whose exact name is a method or
    a template the IssueTrackerProduct itself the files get
    automatically renamed.
    
    New feature: Search smarter by not doing a wildcard search on
    titles unless not found exactly anywhere else.
    
    Bug fixed: Static file's from misc_ set an incorrect header called
    Cache-Length.
    
    New feature: Assignee name shown in rich list on List Issues.
    (Real#0757)
    
    New feature: Document title is changing when a clarvoyant message
    appears on followups.
    
    New feature: Assignee is including in the CSV export from List
    Issues. (Real#0764)

    Bug fixed: Always notify could accidentally send emails to people
    not necessarily in the always notify list but with the same first
    name of the full name.
    
- 0.10.2

    Bug fixed: Fix to make it work in Zope 2.11 with content_types
    being deprecated. Real#0759, Thanks Pat Heffernan.
    
    Bug fixed: Javascript shortcuts not working when writing a
    non-quick followup (e.g. completing an issue)
    
    Bug fixed: Email address allowed non-ascii characters.
    
    Bug fixed: Javascript keyboard shortcuts not loaded correctly on
    adding issue.

- 0.10.1

    Bug fixed: Sometimes it was not possible to complete a followup
    draft since the action was incorrectly set to "Add Followup" not
    "AddFollowup".
    
    New feature: Much performance improved home page now since